--- a/Tourism.html
+++ b/Tourism.html
@@ -160,6 +160,14 @@
                       located in the city of Amritsar, Punjab, India. There are many
                       places to visit Near Golden Temple like Jallianwala Bagh, Wagah Border, Harike Wetland, Bathinda Fort.
                     </p>
+                    <!-- <ul class="detailed-view-card-description unorderd-list"> -->
+                    <ol class="detailed-view-card-description ordered-list">
+                      <li>Jallianwala Bagh</li>
+                      <li>Wagah Border</li>
+                      <li>Harike Wetland</li>
+                      <li>Bathinda Fort</li>
+                    </ol>                              
+                    <!-- </ul> -->
                   </div>
                 </div>
                 <button class="btn btn-dark" onclick="display('sectionFavouritePlaces')">
